// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BibliographicSection component should render default view 1`] = `
<Section
  cards={
    [
      {
        "groups": [
          [
            "rek_title",
          ],
        ],
        "title": "Title",
      },
      {
        "groups": [
          [
            "languages",
          ],
          [
            "fez_record_search_key_journal_name",
            "fez_matched_journals",
          ],
        ],
        "title": "Language of work & Journal name",
      },
      {
        "groups": [
          [
            "fez_record_search_key_isbn",
          ],
        ],
        "title": "ISBN",
      },
      {
        "groups": [
          [
            "issns",
          ],
        ],
        "title": "ISSN",
      },
      {
        "groups": [
          [
            "fez_record_search_key_place_of_publication",
            "fez_record_search_key_publisher",
          ],
          [
            "fez_record_search_key_volume_number",
            "fez_record_search_key_issue_number",
            "fez_record_search_key_article_number",
          ],
          [
            "fez_record_search_key_start_page",
            "fez_record_search_key_end_page",
            "fez_record_search_key_total_pages",
          ],
          [
            "rek_date",
          ],
          [
            "fez_record_search_key_date_available",
          ],
          [
            "rek_description",
          ],
        ],
        "title": "Bibliographic",
      },
      {
        "groups": [
          [
            "fez_record_search_key_keywords",
          ],
        ],
        "title": "Keyword(s)",
      },
      {
        "groups": [
          [
            "subjects",
          ],
        ],
        "title": "Subject",
      },
      {
        "groups": [
          [
            "fez_record_search_key_sdg",
          ],
        ],
        "title": "Sustainable Development Goal",
      },
      {
        "groups": [
          [
            "fez_record_search_key_isderivationof",
          ],
        ],
        "title": "Related publications",
      },
    ]
  }
  disabled={false}
/>
`;

exports[`BibliographicSection component should render design form fields 1`] = `
<Section
  cards={
    [
      {
        "groups": [
          [
            "rek_title",
          ],
        ],
        "title": "Title",
      },
      {
        "groups": [
          [
            "languages",
          ],
        ],
        "title": "Language of work",
      },
      {
        "groups": [
          [
            "fez_record_search_key_isbn",
          ],
        ],
        "title": "ISBN",
      },
      {
        "groups": [
          [
            "issns",
          ],
        ],
        "title": "ISSN",
      },
      {
        "groups": [
          [
            "fez_record_search_key_place_of_publication",
            "fez_record_search_key_publisher",
          ],
          [
            "fez_record_search_key_edition",
            "fez_record_search_key_volume_number",
            "fez_record_search_key_issue_number",
          ],
          [
            "fez_record_search_key_series",
          ],
          [
            "fez_record_search_key_start_page",
            "fez_record_search_key_end_page",
            "fez_record_search_key_total_pages",
          ],
          [
            "rek_date",
          ],
          [
            "fez_record_search_key_date_available",
          ],
          [
            "rek_description",
          ],
          [
            "fez_record_search_key_original_format",
          ],
        ],
        "title": "Bibliographic",
      },
      {
        "groups": [
          [
            "fez_record_search_key_keywords",
          ],
        ],
        "title": "Keyword(s)",
      },
      {
        "groups": [
          [
            "subjects",
          ],
        ],
        "title": "Subject",
      },
      {
        "groups": [
          [
            "fez_record_search_key_sdg",
          ],
        ],
        "title": "Sustainable Development Goal",
      },
      {
        "groups": [
          [
            "fez_record_search_key_isderivationof",
          ],
        ],
        "title": "Related publications",
      },
    ]
  }
  disabled={false}
/>
`;

exports[`BibliographicSection component should render disabled view 1`] = `
<Section
  cards={
    [
      {
        "groups": [
          [
            "rek_title",
          ],
        ],
        "title": "Title",
      },
      {
        "groups": [
          [
            "languages",
          ],
          [
            "fez_record_search_key_journal_name",
            "fez_matched_journals",
          ],
        ],
        "title": "Language of work & Journal name",
      },
      {
        "groups": [
          [
            "fez_record_search_key_isbn",
          ],
        ],
        "title": "ISBN",
      },
      {
        "groups": [
          [
            "issns",
          ],
        ],
        "title": "ISSN",
      },
      {
        "groups": [
          [
            "fez_record_search_key_place_of_publication",
            "fez_record_search_key_publisher",
          ],
          [
            "fez_record_search_key_volume_number",
            "fez_record_search_key_issue_number",
            "fez_record_search_key_article_number",
          ],
          [
            "fez_record_search_key_start_page",
            "fez_record_search_key_end_page",
            "fez_record_search_key_total_pages",
          ],
          [
            "rek_date",
          ],
          [
            "fez_record_search_key_date_available",
          ],
          [
            "rek_description",
          ],
        ],
        "title": "Bibliographic",
      },
      {
        "groups": [
          [
            "fez_record_search_key_keywords",
          ],
        ],
        "title": "Keyword(s)",
      },
      {
        "groups": [
          [
            "subjects",
          ],
        ],
        "title": "Subject",
      },
      {
        "groups": [
          [
            "fez_record_search_key_sdg",
          ],
        ],
        "title": "Sustainable Development Goal",
      },
      {
        "groups": [
          [
            "fez_record_search_key_isderivationof",
          ],
        ],
        "title": "Related publications",
      },
    ]
  }
  disabled={true}
/>
`;
